Fase 02/ws_roomba/log/build_2025-08-27_18-23-05/robot_roomba/stderr.log
  File "/home/druloko/ws_roomba/install/robot_roomba/lib/python3.12/site-packages/robot_roomba/roomba/lib_robot_roomba.py", line 136
    elif category == "state":
    ^^^^
SyntaxError: invalid syntax

